--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,21 @@
 *.obj
 *.elf
 
+# Pastas de compilação (Build)
+[Dd]ebug/
+[Rr]elease/
+x64/
+x86/
+
+# Arquivos de usuário do Visual Studio
+*.user
+
+# Visual Studio specific
+.vs/
+*.suo
+*.user
+*.sln.docstates
+
 # Linker output
 *.ilk
 *.map
