Alteração exercicio 01 e novo exercicio 04

--- a/Lista 03/Lista 03/Lista 03.vcxproj.filters
+++ b/Lista 03/Lista 03/Lista 03.vcxproj.filters
@@ -15,7 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lista 03.cpp">
+    <ClCompile Include="Exercicio01.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
+    <ClCompile Include="Exercicio02.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
+    <ClCompile Include="Exercicio03.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
+    <ClCompile Include="Exercicio04.c">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
   </ItemGroup>
