--- a/Lista 03/Lista 03/Lista 03.vcxproj
+++ b/Lista 03/Lista 03/Lista 03.vcxproj
@@ -123,7 +123,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lista 03.cpp" />
+    <ClCompile Include="Exercicio01.c" />
+    <ClCompile Include="Exercicio02.c" />
+    <ClCompile Include="Exercicio03.c" />
+    <ClCompile Include="Exercicio04.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
