--- a/Lista 03/Lista 03/Lista 03.vcxproj.filters
+++ b/Lista 03/Lista 03/Lista 03.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="Exercicio04.c">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="Exercicio05.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
