--- a/Lista 03/Lista 03/Lista 03.vcxproj.filters
+++ b/Lista 03/Lista 03/Lista 03.vcxproj.filters
@@ -30,5 +30,14 @@
     <ClCompile Include="Exercicio05.c">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="Exercicio06.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
+    <ClCompile Include="Exercicio07.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
+    <ClCompile Include="Exercicio08.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
