--- a/Lista 03/Lista 03/Lista 03.vcxproj.filters
+++ b/Lista 03/Lista 03/Lista 03.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="Exercicio10.c">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="Exercicio11.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
