--- a/Lista 03/Lista 03/Lista 03.vcxproj.filters
+++ b/Lista 03/Lista 03/Lista 03.vcxproj.filters
@@ -48,5 +48,14 @@
     <ClCompile Include="Exercicio11.c">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="Exercicio14.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
+    <ClCompile Include="Exercicio13.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
+    <ClCompile Include="Exercicio15.c">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
